# MediaGateway

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker.yml  docs.yml  rust.yml
benches/: README.md  generate_certs.sh  multi-stream-source-nginx.yaml  multi-stream-source.yaml  video-loop.yaml
benches/certs/nginx/: ca.crt  ca.key  client.crt  client.key  server.crt  server.key
benches/certs/ssl/: ca.key  client.crt  client.key  server.crt  server.key
benches/certs/ssl/client/: 062cd393.0
benches/config/: client_config.json  client_nginx_config.json  client_ssl_config.json  client_tls_config.json  nginx.conf  server_config.json  server_ssl_config.json  server_tls_config.json
docs/: Makefile  README.md
docs/diagrams/: media-gateway.drawio
docs/source/: conf.py  index.rst
docs/source/cookbook/: 0_client_certificate_authentication.rst  0_https.rst  0_secure_communication.rst  0_tls.rst  0_usage_example.rst  1_certificate_auth.rst  1_tls.rst  1_usage_example.rst  1_video_loop.rst  2_basic_auth.rst  3_usage_example.rst
docs/source/getting_started/: 0_configuration.rst  0_deployment.rst  1_deployment.rst  1_secure_communication.rst
docs/source/miscellaneous/: 0_troubleshooting.rst  1_benchmarking.rst  2_caching.rst
docs/source/reference/: 0_api.rst  0_configuration.rst  0_server_api.rst  1_api.rst
media_gateway_client/: Cargo.toml
media_gateway_client/src/: client.rs  configuration.rs  lib.rs  main.rs  retry.rs  service.rs  wait.rs
media_gateway_common/: Cargo.toml
media_gateway_common/src/: api.rs  configuration.rs  health.rs  lib.rs  model.rs  statistics.rs  telemetry.rs
media_gateway_server/: Cargo.toml
media_gateway_server/src/: main.rs  server.rs
media_gateway_server/src/server/: api.rs  configuration.rs  security.rs  service.rs  storage.rs
media_gateway_server/src/server/security/: quarantine.rs
media_gateway_server/src/server/service/: cache.rs  crypto.rs  gateway.rs  health.rs  user.rs
media_gateway_server/src/server/service/crypto/: argon2.rs
media_gateway_server/src/server/storage/: etcd.rs
samples/client/: basic_auth_config.json  certificate_auth_config.json  config.json  default_config.json  https_self_signed_config.json
samples/configuration/client/: basic_auth_config.json  certificate_auth_config.json  default_config.json  https_config.json  https_self_signed_config.json  statistics_config.json
samples/configuration/server/: basic_auth_config.json  certificate_auth_config.json  https_config.json  statistics_config.json
samples/e2e_usage_video_loop_ao_rtsp/: client_config.json  docker-compose-arm64.yaml  docker-compose-x86.yaml  docker-compose.yaml  server_config.json
samples/server/: basic_auth_config.json  certificate_auth_config.json  config.json  default_config.json  https_config.json  ssl_config.json
samples/video_loop/: video-loop.yaml
