[workspace]
resolver = "2"
members = [
    "media_gateway_client",
    "media_gateway_common",
    "media_gateway_server"
]

[workspace.dependencies]
savant_core = { git = "https://github.com/insight-platform/savant-rs", tag = "0.2.30" }
savant-protobuf = { git = "https://github.com/insight-platform/savant-protobuf", tag = "0.2.0" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
twelf = { version = "0.15", features = ["json", "env", "shellexpand"], default-features = false }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ivan Kudriavtsev <ivan.a.kudryavtsev@gmail.com>", "Ksenia Vazhdaeva <vazhdaeva_ks@bw-sw.com"]
description = "Media Gateway (client and server)"
homepage = "https://github.com/insight-platform/MediaGateway"
repository = "https://github.com/insight-platform/MediaGateway"
readme = "README.md"
license = "BSL-1.1"
rust-version = "1.78"
