[package]
name = "media-gateway-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
savant_core = { workspace = true }
savant-protobuf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
twelf = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-timerfd = { workspace = true }
log = { workspace = true }

media_gateway_common = { path = "../media_gateway_common" }

reqwest = { version = "0.12.5", features = ["native-tls"] }
http-auth-basic = "0.3.3"

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

wiremock = "0.6.0"
