[package]
name = "media_gateway_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
savant_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
twelf = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
log = { workspace = true }
env_logger = { workspace = true }

media_gateway_common = { path = "../media_gateway_common" }

actix-web = { version = "4", features = ["rustls-0_22"] }
actix-protobuf = "0.10"
actix-web-httpauth = "0.8.2"
rustls = "0.22.4"
rustls-pemfile = "2.1.2"

[dev-dependencies]
savant-protobuf = { workspace = true }
rand = { workspace = true }
