[package]
name = "media_gateway_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
savant_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
twelf = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
log = { workspace = true }
env_logger = { workspace = true }
actix-web = { workspace = true }
actix-protobuf = { workspace = true }
actix-web-httpauth = { workspace = true }
openssl = { workspace = true }
mockall = { workspace = true }

media_gateway_common = { path = "../media_gateway_common" }

etcd_dynamic_state = { git = "https://github.com/insight-platform/etcd_dynamic_state", tag = "0.2.12" }
etcd-client = { version = "0.13", features = ["tls"] }
parking_lot = "0.12"
argon2 = "0.5"
lru = "0.12"

[dev-dependencies]
savant-protobuf = { workspace = true }
rand = { workspace = true }
futures = "0.3.30"
