[package]
name = "media_gateway_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
savant_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
twelf = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
log = { workspace = true }
env_logger = { workspace = true }
actix-web = { workspace = true }
actix-protobuf = { workspace = true }
actix-web-httpauth = { workspace = true }
openssl = { workspace = true }

media_gateway_common = { path = "../media_gateway_common" }

[dev-dependencies]
savant-protobuf = { workspace = true }
rand = { workspace = true }
